--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,18 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+
+* {
+  scrollbar-width: none;
+}
+
+
+* {
+  -ms-overflow-style: none;
+}
