--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #1e1818;
   --foreground: #171717;
 }
 
@@ -20,17 +20,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 ::-webkit-scrollbar {
   display: none;
 }
 
-
 * {
   scrollbar-width: none;
-}
-
-
-* {
   -ms-overflow-style: none;
 }
